@@ -1,5 +1,11 @@
 2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>
 
+	* src/bookmarks/ephy-topic-action.c
+	
+	Handle DnD to topics on the toolbar.
+
+2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>
+
 	* lib/egg/egg-editable-toolbar.h
 	
 	Checking in forgotten changes to the editable toolbar API.
